# svg2pdf-py

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  update-deps.yml
src/: lib.rs
svg2pdf_py/: __init__.py  svg2pdf_py.pyi
